welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: illegal start of simple expression
    if (d>=13 & d<=19): Boolean = {
                      ^