welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
  def estAdo(d:Int) {
    if (d>=13 & d<=19): Boolean = {
      return true
    } else return false
  }
  
  compteur=0
  if (estAdo(a)==true) {
    compteur=compteur+1}
  if (estAdo(b)==true) {
    compteur=compteur+1}
  if (estAdo(c)==true) {
    compteur=compteur+1}
  if (compteur >= 2) {
    return true 
  } else return false
}
  